--- a/razorpay/templates/razorpay/preview.html
+++ b/razorpay/templates/razorpay/preview.html
@@ -15,7 +15,7 @@
             <h2>{% trans "Payment" %}</h2>
         </div>
         <div class="well well-success">
-            <h4>{% trans "PayPal" %}</h4>
+            <h4>{% trans "Razorpay" %}</h4>
             <p>
                 {% blocktrans with amt=paypal_amount|currency email=paypal_user_email %}
                     {{ amt }} will be deducted from your PayPal account, registered 
