--- a/rzpay/templates/rzpay/dashboard/transaction_list.html
+++ b/rzpay/templates/rzpay/dashboard/transaction_list.html
@@ -15,7 +15,7 @@
         <li>
             Razorpay <span class="divider">/</span>
         </li>
-        <li class="active">{% trans "Express transactions" %}</li>
+        <li class="active">{% trans "Razorpay transactions" %}</li>
     </ul>
 {% endblock %}
 
@@ -29,27 +29,29 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <th>{% trans "Correlation ID" %}</th>
-                    <th>{% trans "Method" %}</th>
-                    <th>{% trans "Result" %}</th>
+                    <th>{% trans "Transaction ID" %}</th>
+                    <th>{% trans "Status" %}</th>
                     <th>{% trans "Amount" %}</th>
-                    <th>{% trans "Token" %}</th>
+                    <th>{% trans "Razorpay ID" %}</th>
                     <th>{% trans "Error code" %}</th>
                     <th>{% trans "Error message" %}</th>
                     <th>{% trans "Date" %}</th>
+                    <th>{% trans "User" %}</th>
+                    <th>{% trans "Email" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for txn in transactions %}
                     <tr>
-                        <td><a href="{% url 'razorpay-detail' txn.id %}">{{ txn.correlation_id|default:"-" }}</a></td>
-                        <td>{{ txn.method }}</td>
-                        <td>{{ txn.ack }}</td>
+                        <td><a href="{% url 'razorpay-detail' txn.id %}">{{ txn.txnid }}</a></td>
+                        <td>{{ txn.status }}</td>
                         <td>{{ txn.amount|currency:txn.currency }}</td>
-                        <td>{{ txn.token|default:'-' }}</td>
+                        <td>{{ txn.rz_id|default:"-" }}</td>
                         <td>{{ txn.error_code|default:'-' }}</td>
                         <td>{{ txn.error_message|default:'-' }}</td>
                         <td>{{ txn.date_created }}</td>
+                        <td>{{ txn.user }}</td>
+                        <td>{{ txn.email }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
