--- a/sandbox/templates/checkout/payment_details.html
+++ b/sandbox/templates/checkout/payment_details.html
@@ -7,6 +7,6 @@
             <h3>{% trans "Razorpay" %}</h3>
         </div>
         <p>{% trans "Click on the below icon to pay using Razorpay but where the shipping address and method is already chosen on the merchant site." %}</p>
-        <div style="overflow:auto"><a href="{% url 'razorpay-direct-payment' %}" title="{% trans "Pay with PayPal" %}">Razorpay payment</a>&nbsp;</div>
+        <div style="overflow:auto"><a href="{% url 'razorpay-direct-payment' %}" title="{% trans "Pay with Razorpay" %}">Razorpay payment</a>&nbsp;</div>
     </div>
 {% endblock %}
